--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -5,8 +5,16 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+
     tools:context=".WorkActivity">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView"
@@ -14,4 +22,9 @@
         android:layout_height="wrap_content"
         android:text="Loading..."
         android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
+
+    </ScrollView>
+
 </RelativeLayout>
